--- a/exercicio.html
+++ b/exercicio.html
@@ -6,12 +6,12 @@
 </head>
 <body>
     <h1>Formulário de cadatro</h1>
-    <label for="nome">Nome</label> <input type="name" id="nome">
+    <label for="nome">Nome</label> <input type="type" id="nome">
     <br>
     <label for="email">E-mail</label> <input type="email" id="email">
     <br>
     <label for="password">Senha</label> <input type="password" id="password">
     <br>
-    <button>Cadastar</button>
+    <button type="submit">Cadastar</button>
 </body>
 </html>
