--- a/exercicio.html
+++ b/exercicio.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Formulário de cadatro</h1>
-    <label for="nome">Nome</label> <input type="type" id="nome">
+    <label for="nome">Nome</label> <input type="text" id="nome">
     <br>
     <label for="email">E-mail</label> <input type="email" id="email">
     <br>
